postgresql-common (12) experimental; urgency=low

  *

 -- Martin Pitt <mpitt@debian.org>  Sat, 28 May 2005 16:09:42 +0200

postgresql-common (11) experimental; urgency=low

  * pg_ctlcluster: Cleaned up variables.
  * Factored out change_ugid() to PgCommon.pm and use it in the scripts.
  * Added pg_maintenance(8) program.
  * Activated formerly disabled postgresql-common.cron.d which calls
    pg_maintenance.
  * pg_createcluster: Default to cluster owner 'postgres' if no owner is
    specified.
  * pg_ctlcluster: Fix pg_controldata output parsing and call pg_controldata
    under locale 'C' to work with all locales. Closes: #310716
  * pg_createcluster: Added --socket-dir option.
  * PgCommon.pm: Fix declaration of @lines in set_conf_value() to avoid
    duplicating the lines in configuration files.
  * PgCommon.pm: Converted to use strict to avoid future errors.
  * pg_maintenance: Removed option '-e' from vacuumdb call (leftover from
    debugging).
  * PgCommon.pm, user_cluster_map(): If several clusters exist, but no
    mapping is configured, return not only the default port's cluster version,
    but also its name. This fixes the socket directory determination for this
    case.
  * debian/rules: Fix clean target to remove the manpages created from POD
    again.
  * pg_upgradecluster: Provide socket directory arguments to psql and
    pg_dumpall to make it work for sockets which are not in /tmp.

 -- Martin Pitt <mpitt@debian.org>  Sat, 28 May 2005 16:02:59 +0200

postgresql-common (10) experimental; urgency=low

  * pg_ctlcluster: Supply cluster socket directory to pg_autovacuum.

 -- Martin Pitt <mpitt@debian.org>  Tue, 24 May 2005 22:57:33 +0200

postgresql-common (9) experimental; urgency=low

  * Add README.Debian with some general introduction, "first steps for the
    impatient", and pointers to further documentation.
  * pg_ctlcluster: Check validity of postmaster locale before setting it.