@@ -146,11 +146,11 @@ sub cluster_info {
 
     # autovacuum settings
 
+    $result{'avac_logfile'} = readlink ($result{'configdir'} . "/autovacuum_log");
     if (get_program_path 'pg_autovacuum', $_[0]) {
 	my $enableval = get_conf_value ($_[0], $_[1], 'autovacuum.conf', 'start');
 	$enableval ||= 'no';
 	$result{'avac_enable'} = ($enableval eq 'yes');
-	$result{'avac_log'} = readlink ($result{'configdir'} . "/autovacuum_log");
 	$result{'avac_sleep_base'} = get_conf_value ($_[0], $_[1], 'autovacuum.conf', 'sleep_base_value');
 	$result{'avac_sleep_scale'} = get_conf_value ($_[0], $_[1], 'autovacuum.conf', 'sleep_scaling_factor');
 	$result{'avac_vac_base'} = get_conf_value ($_[0], $_[1], 'autovacuum.conf', 'vacuum_base_thresold');
