@@ -7,4 +7,4 @@ postgresql TODO
 - add infrastructure to support running scripts/SQL commands on all
   databases on upgrading (like necessary for the two recent CANs)
 - POD: add extra section OPTIONS
-- add test suite to check all operations
+- pg_createcluster: guess correct encoding for 7.4 dbs
