@@ -1,0 +1,4 @@
+Debian package postgresql-7.4 is installed
+Debian package postgresql-8.0 is installed
+Debian package postgresql-contrib-7.4 is missing
+Debian package postgresql-contrib-8.0 is installed
