@@ -1,0 +1,9 @@
+#!/bin/sh -e
+
+# We try to call psql with --version and then on localhost. Since there are no
+# clusters, we expect an error message that the connection to port 5432 is
+# refused. This checks that pg_wrapper correctly picks the default port and
+# uses the highest available version.
+
+psql --version
+psql -h 127.0.0.1 -l || true
