@@ -1,0 +1,5 @@
+psql (PostgreSQL) 8.0.3
+contains support for command-line editing
+psql: could not connect to server: Connection refused
+	Is the server running on host "127.0.0.1" and accepting
+	TCP/IP connections on port 5432?
