@@ -1,0 +1,13 @@
+#!/bin/sh -e
+
+# Create and start a standard 7.4 cluster which should land on the default
+# port; after starting it, we check that the postmaster actually runs and the
+# correct socket directory.
+
+pg_createcluster 7.4 pg74
+pg_ctlcluster -s 7.4 pg74 start
+pg_lsclusters
+echo "Socket directory:"
+ls -a /var/run/postgresql/
+su -c 'psql --version' postgres
+su -c 'psql -l' postgres
