@@ -1,0 +1,21 @@
+Creating new cluster (configuration: /etc/postgresql/7.4/pg74, data: /var/lib/postgresql/7.4/pg74)...
+Moving configuration file /var/lib/postgresql/7.4/pg74/pg_hba.conf to /etc/postgresql/7.4/pg74...
+Moving configuration file /var/lib/postgresql/7.4/pg74/pg_ident.conf to /etc/postgresql/7.4/pg74...
+Moving configuration file /var/lib/postgresql/7.4/pg74/postgresql.conf to /etc/postgresql/7.4/pg74...
+Configuring postgresql.conf to use port 5432...
+Version Cluster   Port Status Owner    Data directory                     Log file                      
+7.4     pg74      5432 online postgres /var/lib/postgresql/7.4/pg74       /var/log/postgresql/postgresql-7.4-pg74.log
+Socket directory:
+.
+..
+.s.PGSQL.5432
+.s.PGSQL.5432.lock
+psql (PostgreSQL) 7.4.8
+contains support for command-line editing
+        List of databases
+   Name    |  Owner   | Encoding  
+-----------+----------+-----------
+ template0 | postgres | SQL_ASCII
+ template1 | postgres | SQL_ASCII
+(2 rows)
+
