@@ -1,0 +1,21 @@
+#!/bin/sh -e
+
+# Create user nobody, a database 'nobodydb' for him, check the database list
+# Then fill nobodydb with some data.
+
+su -c 'createuser nobody -D -A' postgres
+su -c 'createdb -O nobody nobodydb' postgres
+
+su -c 'psql --version' nobody
+su -c 'psql -l' nobody
+
+su -c 'psql nobodydb' nobody <<EOF
+create table phone (
+  name varchar(255) PRIMARY KEY,
+  tel int NOT NULL
+);
+insert into phone values ('Bob', 1);
+insert into phone values ('Alice', 2);
+EOF
+
+su -c 'psql -c "select * from phone" nobodydb' nobody
