@@ -1,0 +1,22 @@
+CREATE USER
+CREATE DATABASE
+psql (PostgreSQL) 7.4.8
+contains support for command-line editing
+        List of databases
+   Name    |  Owner   | Encoding  
+-----------+----------+-----------
+ nobodydb  | nobody   | SQL_ASCII
+ template0 | postgres | SQL_ASCII
+ template1 | postgres | SQL_ASCII
+(3 rows)
+
+NOTICE:  CREATE TABLE / PRIMARY KEY will create implicit index "phone_pkey" for table "phone"
+CREATE TABLE
+INSERT 17147 1
+INSERT 17148 1
+ name  | tel 
+-------+-----
+ Bob   |   1
+ Alice |   2
+(2 rows)
+
