@@ -1,0 +1,13 @@
+#!/bin/sh -e
+
+su -c 'psql -l' nobody
+su -c 'psql -c "select * from phone" nobodydb' nobody
+
+pg_upgradecluster 7.4 pg74
+pg_lsclusters
+
+pg_dropcluster 7.4 pg74
+pg_lsclusters
+
+su -c 'psql -l' nobody
+su -c 'psql -c "select * from phone" nobodydb' nobody
