@@ -1,0 +1,40 @@
+Error: This cluster is still running. Stop it or supply the --stop-server option
+Version Cluster   Port Status Owner    Data directory                     Log file                      
+8.0     pg74      5432 online postgres /var/lib/postgresql/8.0/pg74       /var/log/postgresql/postgresql-8.0-pg74.log
+7.4 configuration directory:
+/etc/postgresql/7.4:
+.
+..
+7.4 data directory:
+.
+..
+8.0 configuration directory:
+/etc/postgresql/8.0:
+.
+..
+pg74
+
+/etc/postgresql/8.0/pg74:
+.
+..
+autovacuum_log
+log
+pg_hba.conf
+pg_ident.conf
+pgdata
+postgresql.conf
+8.0 data directory:
+.
+..
+pg74
+log directory:
+/var/log/postgresql/:
+.
+..
+pg_autovacuum-8.0-pg74.log
+postgresql-8.0-pg74.log
+Socket directory:
+.
+..
+.s.PGSQL.5432
+.s.PGSQL.5432.lock
