@@ -1,0 +1,25 @@
+Error: This cluster is still running. Stop it or supply the --stop-server option
+Version Cluster   Port Status Owner    Data directory                     Log file                      
+7.4 configuration directory:
+/etc/postgresql/7.4:
+.
+..
+7.4 data directory:
+/var/lib/postgresql/7.4:
+.
+..
+8.0 configuration directory:
+/etc/postgresql/8.0:
+.
+..
+8.0 data directory:
+/var/lib/postgresql/8.0:
+.
+..
+log directory:
+/var/log/postgresql/:
+.
+..
+Socket directory:
+.
+..
