@@ -1,8 +1,17 @@
 postgresql-common (12) experimental; urgency=low
 
-  *
+  * pg_ctlcluster: Remove "status" command, it's not documented and not
+    really useful.
+  * PgCommon: Fix cluster_info for avac_logfile to make pg_dropcluster clean
+    away the autovacuum log file.
+  * pg_maintenance: -v only influences vacuumdb output now, always show
+    clusters.
+  * Added a test suite:
+    - Test scripts are in tests/*.
+    - Expected output is in tests/*.ex.
+    - Test suite is run with './testsuite' as root.
 
- -- Martin Pitt <mpitt@debian.org>  Sat, 28 May 2005 16:09:42 +0200
+ -- Martin Pitt <mpitt@debian.org>  Sun, 29 May 2005 12:16:03 +0200
 
 postgresql-common (11) experimental; urgency=low
 
